--- a/wwwroot/wwwroot/css/scss/funka/custom/_header.scss
+++ b/wwwroot/wwwroot/css/scss/funka/custom/_header.scss
@@ -19,7 +19,7 @@ header {
     }
 
     .logo {
-        margin: 13px 0 0 -130px;
+        margin: 13px 0 0 0;
     }
 
     .profile-wrapper {
